--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "torrent-aio-bot",
-  "description": "All in one bot for torrenting",
+  "description": "😄All in one bot for torrenting😄",
   "repository": "https://github.com/patheticGeek/torrent-aio-bot",
   "keywords": ["node", "express", "bot", "torrent", "automation"],
   "builpacks": [
